# onexmatch

./: .gitignore  CITATION.cff  LICENSE  README.md  example.ipynb  pyproject.toml  setup.py
cats/: DESI_synthetic.csv  J-PAS_synthetic.csv  onexmatch_J-PAS_DESI.csv
example/: MoonObs.csv  example.ipynb  jnep.csv  onexmatch_J-NEP_MoonObs.csv  onexmatch_J-PAS_DESI.csv
onexmatch/: __init__.py  core.py
